--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,36 +1,50 @@
 [font]
 size = 10.0
 
-[font.bold]
-family = "FiraCode Nerd Font"
-style = "Bold"
-
-[font.bold_italic]
-family = "FiraCode Nerd Font"
-style = "Bold Italic"
-
-[font.italic]
-family = "FiraCode Nerd Font"
-style = "Italic"
+[font.offset]
+y = -1
 
 [font.normal]
 family = "FiraCode Nerd Font"
 style = "Regular"
 
+[font.bold]
+family = "FiraCode Nerd Font"
+style = "Bold"
+
+[font.italic]
+family = "FiraCode Nerd Font"
+style = "Italic"
+
+[font.bold_italic]
+family = "FiraCode Nerd Font"
+style = "Bold Italic"
+
 [shell]
-program = "pwsh"
+program = "nu"
 
 [window]
 dynamic_title = true
 
 [keyboard]
 bindings = [
-  { key = "Space", mods = "Control", action = "None" },
+    { key = "Space", mods = "Shift|Control", action = "None" },
+    { key = "M", mods = "Shift|Control", action = "ToggleViMode" },
 
-  { key = "U", mode = "Vi|~Search", action = "Left" },
-  { key = "I", mode = "Vi|~Search", action = "Down" },
-  { key = "P", mode = "Vi|~Search", action = "Up" },
-  { key = "E", mode = "Vi|~Search", action = "Right" },
+    { key = "U", mode = "Vi|~Search", action = "Left" },
+    { key = "I", mode = "Vi|~Search", action = "Down" },
+    { key = "P", mode = "Vi|~Search", action = "Up" },
+    { key = "E", mode = "Vi|~Search", action = "Right" },
 
-  { key = "A", mode = "Vi|~Search", action = "ToggleViMode" },
+    { key = "A", mode = "Vi|~Search", action = "ToggleViMode" },
 ]
+
+[[hints.enabled]]
+regex = "~?(/[^/ ]*)+/?"
+action = "Copy"
+binding = { key = "P", mods = "Control|Shift" }
+
+[[hints.enabled]]
+regex = "[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}"
+action = "Copy"
+binding = { key = "D", mods = "Control|Shift" }
