--- a/starship.toml
+++ b/starship.toml
@@ -7,7 +7,7 @@ behind = " ${count} "
 diverged = "󰹹 ${ahead_count}${behind_count} "
 conflicted = " "
 untracked = " "
-staged = " "
+staged = " "
 modified = " "
 deleted = "󰧧 "
 renamed = "󰷉 "
